# cpp-itertools

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  requirements.txt
docs/sphinx/source/: conf.py  hello.rst  index.rst  my_class.rst
include/: hello.h  my_class.h
src/: hello.cpp
tests/: test_main.cpp
